Modified header bar html in index-template.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -6,12 +6,15 @@
     <title>Doit: The Online To-do List</title>
 </head>
 <body>
-    <div>
-        <header>
-            <h1>Doit.</h1>
+    <header>
+        <div id="header-text">
+            <h1 id="header-logo">Doit.</h1>
             <p>The online to-do list that helps you get things done.</p>
-        </header>
-        <button type="button" id="new-proj-btn">New Project</button>
-    </div>
+        </div>
+        <div id="new-proj-btn-sxn">
+            <button type="button" id="new-proj-btn">New Project</button>
+        </div>
+    </header>
+    <main></main> <!--proj and tasks go here-->
 </body>
 </html>
