Installed webpack dev server and html loader, changed logo to img instead of text, fixed font size.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div id="header-text">
-            <h1 id="header-logo">Doit.</h1>
+            <img id="doit-logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.png" alt="Doit Logo.">
             <p>The online to-do list that helps you get things done.</p>
         </div>
         <div id="new-proj-btn-sxn">
