--- a/src/index-template.html
+++ b/src/index-template.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div id="header-text">
-            <img id="doit-logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.png" alt="Doit Logo.">
+            <img id="doit-logo" alt="Doit Logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg">
             <p>The online to-do list that helps you get things done.</p>
         </div>
         <div id="new-proj-btn-sxn">
