Aligned header elements inline with each other.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <header>
-        <div id="header-text">
+       <div class="header-sidebar"></div>
+        <div id="doit-info">
             <img id="doit-logo" alt="Doit Logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg">
             <p>The online to-do list that helps you get things done.</p>
         </div>
         <div id="new-proj-btn-sxn">
             <button type="button" id="new-proj-btn">New Project</button>
         </div>
+        <div class="header-sidebar"></div>
     </header>
     <main></main> <!--proj and tasks go here-->
 </body>
