--- a/src/index-template.html
+++ b/src/index-template.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doit: The Online To-do List</title>
 </head>
+
 <body>
     <header>
-       <div class="header-sidebar"></div>
-        <div id="doit-info">
-            <img id="doit-logo" alt="Doit Logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg">
-            <p>The online to-do list that helps you get things done.</p>
+        <div id="header-left" class="left">
+            <div class="header-sidebar"></div>
+            <div id="doit-info">
+                <img id="doit-logo" alt="Doit Logo"
+                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg">
+                <p>The online to-do list that helps you get things done.</p>
+            </div>
         </div>
-        <div id="new-proj-btn-sxn">
-            <button type="button" id="new-proj-btn">New Project</button>
+        <div id="header-right" class="right">
+            <div id="new-proj-btn-sxn">
+                <button type="button" id="new-proj-btn">New Project</button>
+            </div>
+            <div class="header-sidebar"></div>
         </div>
-        <div class="header-sidebar"></div>
     </header>
     <main></main> <!--proj and tasks go here-->
 </body>
+
 </html>
