Added project button icons to html, cleaned up formatting of dev config.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -13,8 +13,7 @@
         <div id="header-left" class="left">
             <div class="sidebar"></div>
             <div id="doit-info">
-                <img id="doit-logo" alt="Doit Logo"
-                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg">
+                <img id="doit-logo" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/doit-logo.svg" alt="Doit Logo">
                 <p>The online to-do list that helps you get things done.</p>
             </div>
         </div>
@@ -35,10 +34,16 @@
                     <p>0/2 Tasks Complete</p>
                 </div>
                 <div class="project-options">
-                    <button type="button" class="edit-proj-btn">Edit Project</button>
-                    <button type="button" class="delete-proj-btn">Delete Project</button>
+                    <button type="button" class="edit-proj-btn">
+                        <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg" alt="Edit Project">
+                    </button>
+                    <button type="button" class="delete-proj-btn">
+                        <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg" alt="Delete Project">
+                    </button>
                 </div>
-                <button type="button" class="open-proj-btn">Open Project</button>
+                <button type="button" class="open-proj-btn">
+                    <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg" alt="Open Project">
+                </button>
             </div>
         </div>
         <div class="right sidebar"></div>
