Made new css class invis-btn to turn all project buttons transparent, renamed wrongly named icon files.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -34,14 +34,14 @@
                     <p>0/2 Tasks Complete</p>
                 </div>
                 <div class="project-options">
-                    <button type="button" class="edit-proj-btn">
+                    <button type="button" class="edit-proj-btn invis-btn">
                         <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg" alt="Edit Project">
                     </button>
-                    <button type="button" class="delete-proj-btn">
+                    <button type="button" class="delete-proj-btn invis-btn">
                         <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg" alt="Delete Project">
                     </button>
                 </div>
-                <button type="button" class="open-proj-btn">
+                <button type="button" class="open-proj-btn invis-btn">
                     <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg" alt="Open Project">
                 </button>
             </div>
