--- a/src/index-template.html
+++ b/src/index-template.html
@@ -31,7 +31,7 @@
             <div class="closed project">
                 <div class="project-info">
                     <h2>Project Name</h2>
-                    <p>0/2 Tasks Complete</p>
+                    <p class="complete light-grey">0/2 Tasks Complete</p>
                 </div>
                 <div class="project-options">
                     <button type="button" class="edit-proj-btn invis-btn">
