Renamed large-icon to big-icon, finished sizing rules for icons.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -35,14 +35,14 @@
                 </div>
                 <div class="project-options">
                     <button type="button" class="edit-proj-btn invis-btn">
-                        <img class="30x30" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg" alt="Edit Project">
+                        <img class="small-icon" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg" alt="Edit Project">
                     </button>
                     <button type="button" class="delete-proj-btn invis-btn">
-                        <img class="30x30" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg" alt="Delete Project">
+                        <img class="small-icon" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg" alt="Delete Project">
                     </button>
                 </div>
                 <button type="button" class="open-proj-btn invis-btn">
-                    <img class="40x40" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg" alt="Open Project">
+                    <img class="big-icon" src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg" alt="Open Project">
                 </button>
             </div>
         </div>
