Added closed class to show-tasks-btn.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -49,7 +49,7 @@
                     <p class="dark-grey">0/2 Tasks Complete</p>
                 </div>
 
-                <button type="button" class="open-proj-btn invis-btn">
+                <button type="button" class="closed invis-btn right show-tasks-btn">
                     <img class="big-icon"
                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg"
                         alt="Open Project">
