Created clickable class for all buttons.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -20,7 +20,7 @@
         </div>
         <div id="header-right" class="right">
             <div id="new-proj-btn-sxn">
-                <button type="button" id="new-proj-btn">New Project</button>
+                <button type="button" id="new-proj-btn" class="clickable">New Project</button>
             </div>
             <div class="sidebar"></div>
         </div>
@@ -34,12 +34,12 @@
                     <div class="flex-inline">
                         <h2>Project Name</h2>
                         <div class="project-options">
-                            <button type="button" class="edit-proj-btn invis-btn">
+                            <button type="button" class="clickable edit-proj-btn invis-btn">
                                 <img class="small-icon"
                                     src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
                                     alt="Edit Project">
                             </button>
-                            <button type="button" class="delete-proj-btn invis-btn">
+                            <button type="button" class="clickable delete-proj-btn invis-btn">
                                 <img class="small-icon"
                                     src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
                                     alt="Delete Project">
@@ -49,7 +49,7 @@
                     <p class="dark-grey">0/2 Tasks Complete</p>
                 </div>
 
-                <button type="button" class="closed invis-btn right show-tasks-btn">
+                <button type="button" class="clickable closed invis-btn right show-tasks-btn">
                     <img class="big-icon"
                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg"
                         alt="Open Project">
