Separated project closed styling into closed class, finished appearance of open project.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -49,9 +49,37 @@
                     <p class="dark-grey">0/2 Tasks Complete</p>
                 </div>
 
-                <button type="button" class="clickable closed invis-btn right show-tasks-btn">
+                <button type="button" class="clickable invis-btn right show-tasks-btn">
                     <img class="big-icon"
                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg"
+                        alt="Open Project">
+                </button>
+            </div>
+
+            <!--TODO: Implement JS for replacing show tasks icon-->
+            <div class="open project">
+                <div class="project-info">
+                    <div class="flex-inline">
+                        <h2>Project Name</h2>
+                        <div class="project-options">
+                            <button type="button" class="clickable edit-proj-btn invis-btn">
+                                <img class="small-icon"
+                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
+                                    alt="Edit Project">
+                            </button>
+                            <button type="button" class="clickable delete-proj-btn invis-btn">
+                                <img class="small-icon"
+                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
+                                    alt="Delete Project">
+                            </button>
+                        </div>
+                    </div>
+                    <p class="dark-grey">0/2 Tasks Complete</p>
+                </div>
+
+                <button type="button" class="clickable invis-btn right show-tasks-btn">
+                    <img class="big-icon"
+                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/close-proj-btn.svg"
                         alt="Open Project">
                 </button>
             </div>
