--- a/src/index-template.html
+++ b/src/index-template.html
@@ -29,59 +29,39 @@
     <main>
         <div class="left sidebar"></div>
         <div id="projects-window">
-            <div class="closed project">
-                <div class="project-info">
-                    <div class="flex-inline">
-                        <h2>Project Name</h2>
-                        <div class="project-options">
-                            <button type="button" class="clickable edit-proj-btn invis-btn">
-                                <img class="small-icon"
-                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
-                                    alt="Edit Project">
-                            </button>
-                            <button type="button" class="clickable delete-proj-btn invis-btn">
-                                <img class="small-icon"
-                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
-                                    alt="Delete Project">
-                            </button>
-                        </div>
-                    </div>
-                    <p class="dark-grey">0/2 Tasks Complete</p>
-                </div>
-
-                <button type="button" class="clickable invis-btn right show-tasks-btn">
-                    <img class="big-icon"
-                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/open-proj-btn.svg"
-                        alt="Open Project">
-                </button>
-            </div>
-
             <!--TODO: Implement JS for replacing show tasks icon-->
-            <div class="open project">
-                <div class="project-info">
-                    <div class="flex-inline">
-                        <h2>Project Name</h2>
-                        <div class="project-options">
-                            <button type="button" class="clickable edit-proj-btn invis-btn">
-                                <img class="small-icon"
-                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
-                                    alt="Edit Project">
-                            </button>
-                            <button type="button" class="clickable delete-proj-btn invis-btn">
-                                <img class="small-icon"
-                                    src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
-                                    alt="Delete Project">
-                            </button>
+            <div class="project">
+                <div class="open project-bar">
+                    <div class="project-info">
+                        <div class="flex-inline">
+                            <h2>Project Name</h2>
+                            <div class="project-options">
+                                <button type="button" class="clickable edit-proj-btn invis-btn">
+                                    <img class="small-icon"
+                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
+                                        alt="Edit Project">
+                                </button>
+                                <button type="button" class="clickable delete-proj-btn invis-btn">
+                                    <img class="small-icon"
+                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
+                                        alt="Delete Project">
+                                </button>
+                            </div>
                         </div>
+                        <p class="dark-grey">0/2 Tasks Complete</p>
                     </div>
-                    <p class="dark-grey">0/2 Tasks Complete</p>
-                </div>
 
-                <button type="button" class="clickable invis-btn right show-tasks-btn">
-                    <img class="big-icon"
-                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/close-proj-btn.svg"
-                        alt="Open Project">
-                </button>
+                    <button type="button" class="clickable invis-btn right show-tasks-btn">
+                        <img class="big-icon"
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/close-proj-btn.svg"
+                            alt="Open Project">
+                    </button>
+                </div>
+                <div class="tasks">
+                    <p>test</p>
+                    <p>test</p>
+                    <p>test</p>
+                </div>
             </div>
         </div>
         <div class="right sidebar"></div>
