Added new elements to prepare for task styling and implementation.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -58,9 +58,14 @@
                     </button>
                 </div>
                 <div class="tasks">
-                    <p>test</p>
-                    <p>test</p>
-                    <p>test</p>
+                    <div class="task-bar">
+                        <button type="button">Mark Done</button>
+                        <h3>New Task</h3>
+                        <button type="button">Star</button>
+                        <button type="button">Notes</button>
+                        <p>Due October 1, 2024 1:00PM</p>
+                        <button type="button">Edit</button>
+                    </div>
                 </div>
             </div>
         </div>
