Refacored redundant rules for new proj btn.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div id="header-right" class="right">
-            <div id="new-proj-btn-sxn">
+            <div id="new-proj-btn-sxn" class="flex-inline">
                 <button type="button" id="new-proj-btn" class="clickable">New Project</button>
             </div>
             <div class="sidebar"></div>
