--- a/src/index-template.html
+++ b/src/index-template.html
@@ -71,11 +71,10 @@
                                 </div>
                             </div>
                             <div class="due-date">
-                                <p>Due October 1, 2024 1:00PM</p>
-                                <span class="warning">1 Week</span>
+                                <p>Due October 1, 2024 1:00PM <span class="warning">1 Week</span></p>
                             </div>
                         </div>
-                        <button type="button" class="menu-btn">Menu</button>
+                        <button type="button" class="right menu-btn">Menu</button>
                     </div>
                 </div>
             </div>
