Added images to task buttons.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -66,15 +66,27 @@
                             <div class="task-info">
                                 <h3>New Task</h3>
                                 <div class="task-options">
-                                    <button type="button" class="star-full">Star</button>
-                                    <button type="button" class="notes-btn">Notes</button>
+                                    <button type="button" class="star-full">
+                                        <img class="small-icon" 
+                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/star-full.svg" 
+                                        alt="Star Full">
+                                    </button>
+                                    <button type="button" class="notes-btn">
+                                        <img class="small-icon" 
+                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/notes-btn.svg" 
+                                        alt="Notes">
+                                    </button>
                                 </div>
                             </div>
                             <div class="due-date">
                                 <p>Due October 1, 2024 1:00PM <span class="warning">1 Week</span></p>
                             </div>
                         </div>
-                        <button type="button" class="right menu-btn">Menu</button>
+                        <button type="button" class="right menu-btn">
+                            <img class="big-icon" 
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/menu-btn.svg" 
+                            alt="Task Menu">
+                        </button>
                     </div>
                 </div>
             </div>
