Added new task checkmark icons, added to template.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -61,7 +61,11 @@
                 <!--Tasks for Project 777690-->
                 <div class="tasks">
                     <div data-id="555420" class="task-bar">
-                        <button type="button" class="mark-done-btn">Mark Done</button>
+                        <button type="button" class="mark-done-btn">
+                            <img class="big-icon" 
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-empty.svg" 
+                            alt="Mark task as done">
+                        </button>
                         <div class="task-content">
                             <div class="task-info">
                                 <h3>New Task</h3>
