changed invis-btn to invis for brevity's sake.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -37,12 +37,12 @@
                         <div class="flex-inline">
                             <h2>Project Name</h2>
                             <div class="project-options">
-                                <button type="button" class="clickable edit-proj-btn invis-btn">
+                                <button type="button" class="clickable edit-proj-btn invis">
                                     <img class="small-icon"
                                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/edit-proj-btn.svg"
                                         alt="Edit Project">
                                 </button>
-                                <button type="button" class="clickable delete-proj-btn invis-btn">
+                                <button type="button" class="clickable delete-proj-btn invis">
                                     <img class="small-icon"
                                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/delete-proj-btn.svg"
                                         alt="Delete Project">
@@ -52,7 +52,7 @@
                         <p class="dark-grey">0/2 Tasks Complete</p>
                     </div>
     
-                    <button type="button" class="clickable invis-btn right show-tasks-btn">
+                    <button type="button" class="clickable invis right show-tasks-btn">
                         <img class="big-icon"
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/close-proj-btn.svg"
                             alt="Open Project">
@@ -61,7 +61,7 @@
                 <!--Tasks for Project 777690-->
                 <div class="tasks">
                     <div data-id="555420" class="task-bar">
-                        <button type="button" class="mark-done-btn">
+                        <button type="button" class="invis mark-done-btn">
                             <img class="big-icon" 
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-empty.svg" 
                             alt="Mark task as done">
@@ -70,12 +70,12 @@
                             <div class="task-info">
                                 <h3>New Task</h3>
                                 <div class="task-options">
-                                    <button type="button" class="star-full">
+                                    <button type="button" class="invis star-full">
                                         <img class="small-icon" 
                                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/star-full.svg" 
                                         alt="Star Full">
                                     </button>
-                                    <button type="button" class="notes-btn">
+                                    <button type="button" class="invis notes-btn">
                                         <img class="small-icon" 
                                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/notes-btn.svg" 
                                         alt="Notes">
@@ -86,7 +86,7 @@
                                 <p>Due October 1, 2024 1:00PM <span class="warning">1 Week</span></p>
                             </div>
                         </div>
-                        <button type="button" class="right menu-btn">
+                        <button type="button" class="invis right menu-btn">
                             <img class="big-icon" 
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/menu-btn.svg" 
                             alt="Task Menu">
