Added clickable class to task buttons, adjusted notes icon size.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -61,7 +61,7 @@
                 <!--Tasks for Project 777690-->
                 <div class="tasks">
                     <div data-id="555420" class="task-bar">
-                        <button type="button" class="invis mark-done-btn">
+                        <button type="button" class="clickable invis mark-done-btn">
                             <img class="big-icon" 
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-empty.svg" 
                             alt="Mark task as done">
@@ -70,14 +70,13 @@
                             <div class="task-info">
                                 <h3>New Task</h3>
                                 <div class="task-options">
-                                    <button type="button" class="invis star-full">
+                                    <button type="button" class="clickable invis star-full">
                                         <img class="small-icon" 
                                         src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/star-full.svg" 
                                         alt="Star Full">
                                     </button>
-                                    <button type="button" class="invis notes-btn">
-                                        <img class="small-icon" 
-                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/notes-btn.svg" 
+                                    <button type="button" class="clickable invis notes-btn">
+                                        <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/notes-btn.svg" 
                                         alt="Notes">
                                     </button>
                                 </div>
@@ -86,7 +85,7 @@
                                 <p>Due October 1, 2024 1:00PM <span class="warning">1 Week</span></p>
                             </div>
                         </div>
-                        <button type="button" class="invis right menu-btn">
+                        <button type="button" class="clickable invis right menu-btn">
                             <img class="big-icon" 
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/menu-btn.svg" 
                             alt="Task Menu">
