Removed margins from all paragraph elements, finished task warning styling.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -82,7 +82,8 @@
                                 </div>
                             </div>
                             <div class="due-date">
-                                <p>Due October 1, 2024 1:00PM <span class="warning">1 Week</span></p>
+                                <p>Due October 1, 2024 1:00PM</p>
+                                <div class="warning"><p>1 Week</p></div>
                             </div>
                         </div>
                         <button type="button" class="clickable invis right menu-btn">
