Adjusted completed style rule, began work on task buttons changing when hovered over.

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -64,6 +64,41 @@
                         <button type="button" class="clickable invis mark-done-btn">
                             <img class="big-icon" 
                             src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-empty.svg" 
+                            alt="Mark as done">
+                            <img class="big-icon img-hover" 
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-full.svg"
+                            alt="Undo mark as done">
+                        </button>
+                        <div class="task-content">
+                            <div class="task-info">
+                                <h3>New Task</h3>
+                                <div class="task-options">
+                                    <button type="button" class="clickable invis star-full">
+                                        <img class="small-icon" 
+                                        src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/star-full.svg" 
+                                        alt="Star Full">
+                                    </button>
+                                    <button type="button" class="clickable invis notes-btn">
+                                        <img src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/notes-btn.svg" 
+                                        alt="Notes">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="due-date">
+                                <p>Due October 1, 2024 1:00PM</p>
+                                <div class="warning"><p>1 Week</p></div>
+                            </div>
+                        </div>
+                        <button type="button" class="clickable invis right menu-btn">
+                            <img class="big-icon" 
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/menu-btn.svg" 
+                            alt="Task Menu">
+                        </button>
+                    </div>
+                    <div data-id="834848" class="task-bar">
+                        <button type="button" class="clickable invis mark-done-btn">
+                            <img class="big-icon" 
+                            src="/Users/sen/COMPUTER STUFF (LOCAL)/webdev/doit webapp/src/assets/circle-full.svg"
                             alt="Mark task as done">
                         </button>
                         <div class="task-content">
